--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ body{
 }
 h2{
     color:var(--secondry-color);
-    font-size: 75px;
+    font-size: 7vw;
     text-transform: capitalize;
     margin-top: 20px;
 }
